fix: excalidraw context menu popover broken style

--- a/imports/excalidraw/components/Popover.style.scss
+++ b/imports/excalidraw/components/Popover.style.scss
@@ -1,5 +1,5 @@
 .excalidraw {
-  .popover {
+  .excalidraw-popover {
     position: absolute;
     z-index: 10;
     padding: 5px 0 5px;
